--- a/index.html
+++ b/index.html
@@ -107,11 +107,12 @@
 							<div class="calculator__operation">
 								3
 							</div>
-							<div class="calculator__operation calculator__operation--white">
+							<div class="calculator__operation  calculator__operation--white">
 								<img src="icons/plus.svg" alt="plus" />
 							</div>
 							<div class="calculator__operation">
-								<img src="icons/plus-minus.svg" alt="plus-minus" />
+								<img class="calculator__operation--disscus" src="icons/plus-minus.svg"
+									alt="plus-minus" />
 							</div>
 							<div class="calculator__operation">
 								0
